fixed project grid with flex-wrap

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
   }
   
   .project-tile {
